--- a/Python Assignment.ipynb
+++ b/Python Assignment.ipynb
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Loading and proccess the data"
+    "## Loading and cleaning the data"
    ]
   },
   {
